separate windows vs linux requirements

--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,5 @@ PG_DB=etl
 DENYLIST_DB_CONNECTION_STRING=postgresql://username:password@host:5432/denylist
 
 S3_BUCKET=denylist-reports
+
+MAPBOX_TOKEN=<MAPBOX_TOKEN>
