--- a/requirements-win.txt
+++ b/requirements-win.txt
@@ -17,11 +17,9 @@ dash-table==5.0.0
 Flask==2.2.0
 Flask-Compress==1.12
 greenlet==1.1.2
-gunicorn==20.1.0
 h3==3.7.4
 hyperframe==6.0.1
 idna==3.3
-importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -31,7 +29,7 @@ numpy==1.23.1
 pandas==1.4.3
 paramiko==2.11.0
 plotly==5.9.0
-psycopg2-binary==2.9.3
+psycopg2==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
 python-dateutil==2.8.2
@@ -45,4 +43,3 @@ sshtunnel==0.4.0
 tenacity==8.0.1
 urllib3==1.26.11
 Werkzeug==2.2.1
-zipp==3.8.1
