--- a/requirements-win.txt
+++ b/requirements-win.txt
@@ -17,6 +17,7 @@ dash-table==5.0.0
 Flask==2.2.0
 Flask-Compress==1.12
 greenlet==1.1.2
+gunicorn==20.1.0
 h3==3.7.4
 hyperframe==6.0.1
 idna==3.3
@@ -26,20 +27,25 @@ jmespath==1.0.1
 marko==1.2.1
 MarkupSafe==2.1.1
 numpy==1.23.1
+packaging==21.3
 pandas==1.4.3
 paramiko==2.11.0
+patsy==0.5.2
 plotly==5.9.0
 psycopg2==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.1
 s3transfer==0.6.0
+scipy==1.9.0
 six==1.16.0
 SQLAlchemy==1.4.39
 sshtunnel==0.4.0
+statsmodels==0.13.2
 tenacity==8.0.1
 urllib3==1.26.11
 Werkzeug==2.2.1
