PR support, regular updates, fix maker pie chart query

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,7 @@ PG_PW=etl
 PG_DB=etl
 
 DENYLIST_DB_CONNECTION_STRING=postgresql://username:password@host:5432/denylist
+DENYLIST_DB_SCHEMA=public
 
 S3_BUCKET=denylist-reports
 
